--- a/Frontend-deo/src/App.css
+++ b/Frontend-deo/src/App.css
@@ -61,3 +61,14 @@
     transform: rotate(360deg);
   }
 }
+
+/*body {
+  background-image: url("/Todo.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}*/
